# actions

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
.github/: mergify.yml
.github/workflows/: lint.yaml
pre-commit/: action.yaml  poetry.yaml
prek/: action.yaml
setup-go/: action.yaml
