[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "test"
version = "4.2.2"
description = ""
authors = []
readme = ''
license = 'MIT'
package-mode = false

[tool.poetry.dependencies]
python = "^3.7"
# dependencies

[tool.poetry.group.dev.dependencies]
pre-commit = { version = "==3.7.0", markers = "implementation_name != 'pypy'", python = "^3.9" }
